set up app boilerplate and installed dependencies

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "imagecode",
   "version": "1.0.0",
   "description": "An API for converting images to Unicode characters.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/HuIsJason/imagecode/issues"
   },
-  "homepage": "https://github.com/HuIsJason/imagecode#readme"
+  "homepage": "https://github.com/HuIsJason/imagecode#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "puppeteer": "^5.4.0"
+  }
 }
